# VehicleFactory

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
TransportProject/: Autobus.cpp  Autobus.h  Automobile.cpp  Automobile.h  CMakeLists.txt  Motorcycle.cpp  Motorcycle.h  Scooter.cpp  Scooter.h  Transport.h  TransportFactory.cpp  TransportFactory.h  main.cpp
